0.17.1
	bugfix: tags were not displayed on "File" page
	bugfix: multiline comment for an added file was stored incorrectly
	bugfix: user's displayed name was sometimes lost with LDAP auth
	bugfix: rackspace rows highlightling was broken in previous release
	bugfix: IPv4 address picker window was broken
	bugfix: string value "0" was incorrectly handled, when displaying or entering data
	update: removed unused database index
0.17.0 2009-05-20
	new feature: file attachments (by Aaron)
	new feature: ability to delete objects (by Aaron)
	new feature: external "httpd" user authentication
	new feature: validator in RackCode editor
	new feature: vendor sieve for stickers
	new feature: RackCode expressions as source for load balancer lists
	new feature: wireless hardware in dictionary
	new feature: "racks per row" option (by Frank Brodbeck)
	new feature: LDAP cache
	update: display row name when listing objects. closes ticket 16 (by Aaron)
	update: ability to manage rows from the Rackspace page in addition to the Dictionary (by Aaron)
	update: allow port type to be changed if it isn't linked.  closes ticket 137 (by Aaron)
	update: add network security chapter and dictionary entries.  closes ticket 148 (by Aaron)
	update: add HP and Juniper dictionary entries.  closes tickets 145 and 165 (by Aaron)
	update: combined two forms on object properties page into one.  closes tickets 36 and 87 (by Aaron)
	update: display and edit the dictionary chapter by chapter (ticket:151)
	update: 'enabled' user acount flag was dropped
	update: switchvlans gateway has been updated
	update: RackTables installation is now done only through install.php
	update: records for F5 hardware
	update: don't require HASH extension any more
	update: rack thumb dimensions aren't configured any more
	update: SNMP code for Nexus and HP switches (with help from killsystem)
	update: tag filter has been completely rewritten
	bugfix: show error message if snmp module isn't loaded.  closes ticket 43 (by Aaron)